# src/FundingProjection.Api/Controllers/EmployerFundingProjectionController.cs
@@ -1,0 +1,41 @@
+﻿using Microsoft.AspNetCore.Mvc;
+using SFA.DAS.FundingProjection.Data.Repositories;
+using System.ComponentModel.DataAnnotations;
+using System.Net;
+using SFA.DAS.FundingProjection.Api.Core;
+using SFA.DAS.FundingProjection.Api.Models;
+using SFA.DAS.FundingProjection.Api.Models.Mappers;
+
+namespace SFA.DAS.FundingProjection.Api.Controllers;
+
+[ApiController]
+public class EmployerFundingProjectionController(
+    [FromServices] IEmployerFundingProjectionRepository repository,
+    ILogger<EmployerFundingProjectionController> logger) : ControllerBase
+{
+    [HttpGet]
+    [Route($"{RouteNames.EmployerFundingProjection}/{{accountId:long}}/{RouteElements.FundingProjection}")]
+    [ProducesResponseType(StatusCodes.Status500InternalServerError)]
+    [ProducesResponseType(typeof(string), StatusCodes.Status404NotFound)]
+    [ProducesResponseType(typeof(GetEmployerFundingProjectionResponse), StatusCodes.Status200OK)]
+    public async Task<IResult> Get(
+        [FromRoute] [Required] long accountId,
+        CancellationToken token)
+    {
+        try
+        {
+            logger.LogInformation("Funding Projection API: Received query to get projection by accountId : {Id}", accountId);
+
+            var response = await repository.GetByEmployerAccountIdAsync(accountId, token);
+
+            return response == null
+                ? Results.NotFound()
+                : TypedResults.Ok(response.ToGetResponse());
+        }
+        catch (Exception e)
+        {
+            logger.LogError(e, "Unable to Get funding projection : An error occurred");
+            return Results.Problem(statusCode: (int)HttpStatusCode.InternalServerError);
+        }
+    }
+}
